# IncidentResponse-Privacy

./: .env.production  .gitignore  .replit  ARQUIVOS_PARA_GIT.md  CONFIGURE_VPS_FINAL.md  CORRECOES_VPS.md  DEPLOY_VPS.md  DIAGNOSTICO_502.md  DOCUMENTACAO_SISTEMA_ROBUSTO.md  GUIA_DEPLOY_VPS.md  INSTALL_VPS.md  INSTALL_VPS_DIRETO.md  README.md  README_DEPLOY.md  README_VPS.md  RESUMO_DEPLOY.md  SOLUCAO_GIT.md  TROUBLESHOOTING.md  atualizar-github-vps.sh  config_processor.json  config_recursive.json  corrigir-app-vps.sh  corrigir-servico-vps.sh  dashboard.py  data_extractor.py  data_validator.py  database.py  deploy-complete.sh  deploy-final-vps.sh  deploy-final.sh  deploy.sh  diagnosticar-vps.sh  file_reader.py  fix-502-error.sh  fix-502-simple.sh  fix-ai-status.sh  fix-complete-vps.sh  fix-final-deployment.sh  fix-nginx-conflicts.sh  fix-nginx.sh  (+49 more)
app/: .env.example  ai_enhanced_processor.py  ai_processor_simplified.py  ai_super_processor.py  database.py  database_postgresql.py  file_scanner.py  gunicorn.conf.py  main.py  web_interface.py
attached_assets/: Matriz de dados - OBA (Exemplo) (2)_1751047463263.xlsx  Pasted--0-45-1-Requirement-already-satisfied-packaging-19-1-in-venv-lib-python3-12-site-packages-fr-1751118743533_1751118743533.txt  Pasted--1-Ver-o-erro-espec-fico-journalctl-u-privacy-no-pager-l-n-5-Description-n-crisisops-Privacy-1751064116570_1751064116570.txt  Pasted--Gerando-lockfile-de-depend-ncias-ERROR-Cannot-install-r-requirements-in-line-43-langchai-1751119068079_1751119068080.txt  Pasted--ul-div-div--1751122102616_1751122102617.txt  (+15 more)
docs/: replit.md
(+55 files in other folders)
