[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "docx>=0.2.4",
    "extract-msg>=0.54.1",
    "flask>=3.1.1",
    "langchain-community>=0.3.26",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.92.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.7",
    "pillow>=11.2.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "watchdog>=6.0.0",
]
